# MicroLiteOS

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  remake.sh
Application/: FreeRTOSConfig.h  bsp_mpu_exti.c  bsp_mpu_exti.h  i2c.c  i2c.h  lv_conf.h  main.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  system_stm32f4xx.c  usart.c  usart.h
Application/led/: bsp_led.c  bsp_led.h
CMSIS-FreeRTOS-main/CMSIS/RTOS2/FreeRTOS/Source/: cmsis_os2.c
CMSIS_5-develop/CMSIS/RTOS2/Source/: os_systick.c
Drive/Include/: bsp_i2c_touch.h  bsp_lcd.h  bsp_led.h  bsp_sdram.h  bsp_touch_gtxx.h  sht4x_drv.h  usart.h
Drive/Source/: bsp_i2c_touch.c  bsp_lcd.c  bsp_led.c  bsp_sdram.c  bsp_touch_gtxx.c  sht4x_drv.c  usart.c
STM32/CMSIS/RTOS2/Include/: freertos_evr.h
STM32/CMSIS/RTOS2/Source/: cmsis_os2.c  os_systick.c
STM32/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_fmc.c
cm_backtrace/: cm_backtrace_port.c  cmb_cfg.h
docs/: project_structure.md
linker/: STM32F429NI_FLASH.ld
lvgl/demos/widgets/: lv_demo_widgets.c
lvgl/src/draw/dma2d/: lv_draw_dma2d.c
lvgl/src/osal/: lv_os.h
startup/: startup_stm32f407xx.s  startup_stm32f429xx.s
tools/: flash.jlink
ui/: ui_app.c  ui_app.h
